--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,9 @@ python_requires = >=3.8
 
 [options.packages.find]
 where = src
+
+[flake8]
+exclude = */__init__.py
+ignore = E203,W503
+max-line-length = 99
+show-source = true
