--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ psycopg2-binary==2.9.1
 pytz==2021.1
 setproctitle==1.2.2
 six==1.15.0
+requests==2.25.1
 python-dotenv==0.17.0
 blinker==1.4
 marshmallow==3.12.1
