--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = flask_utils
-version = 1.0.66
-author = Atelier des chefs
+version = 1.0.67
+author = atelier des chefs
 author_email = dev@atelierdeschefs.com
 description = Some flask utils
 long_description = file: README.md
